Corrections spacing

--- a/css/letItFlow.css
+++ b/css/letItFlow.css
@@ -1,6 +1,6 @@
 .letItFlow {
   margin: 10px auto;
-  padding: 10px;
+  padding: 30px 40px;
   z-index: 0;
   clear: both;
   position: relative;
@@ -10,14 +10,15 @@
 }
 .letItFlow .lif-steps,
 .letItFlow .lif-progress {
-  width: 85%;
+  width: 100%;
   overflow: hidden;
   margin: 0 auto;
 }
 .letItFlow .lif-steps {
   position: relative;
   z-index: 10;
-  width: 84%;
+  width: 99%;
+  margin-top: -30px;
 }
 .letItFlow .lif-steps p {
   display: block;
@@ -34,7 +35,10 @@
   opacity: 0.3;
   padding: 0 0.5%;
   margin: 0;
+  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
   box-sizing: border-box;
 }
 .letItFlow .lif-steps a {
@@ -49,6 +53,7 @@
   text-align: center;
   height: 25px;
   padding-top: 5px;
+  margin-bottom: -30px;
 }
 .letItFlow .stepTooltip span {
   background: #333333;
@@ -78,7 +83,10 @@
   position: relative;
   margin: 0 auto;
   height: 100%;
+  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
   box-sizing: border-box;
   z-index: 20;
   opacity: 0.25;
@@ -91,7 +99,10 @@
   position: relative;
   border-left: 1px solid white;
   border-right: 1px solid black;
+  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
   box-sizing: border-box;
 }
 .letItFlow .lif-progress .cuts span:first-child {
@@ -142,8 +153,9 @@
 .endsDates {
   height: 70px;
   position: absolute;
-  top: 18px;
-  width: 98%;
+  top: 50%;
+  width: 100%;
+  margin: -35px -40px 0;
   z-index: 0;
 }
 .endsDates .start,
@@ -189,10 +201,7 @@
 }
 .letItFlow.small .endsDates {
   height: 60px;
-}
-.letItFlow.small .endsDates .start,
-.letItFlow.small .endsDates .end {
-  padding: 2px 10px;
+  margin-top: -30px;
 }
 .letItFlow.xsmall {
   font-size: 10px;
@@ -202,10 +211,7 @@
 }
 .letItFlow.xsmall .endsDates {
   height: 50px;
-}
-.letItFlow.xsmall .endsDates .start,
-.letItFlow.xsmall .endsDates .end {
-  padding: 2px 20px;
+  margin-top: -25px;
 }
 
 /*** LIGHT LAYOUT ** */
@@ -258,6 +264,7 @@
     height: auto;
     margin: 0 auto;
     position: relative;
+    top: 0;
     width: 100%;
     z-index: 0;
   }
